# coolbox

./: .gitignore  Cargo.toml  README.md  build.yaml  cargo.toml  justfile  pubspec.yaml  rustfmt.toml
.run/: Run coolbox hot reload.run.xml  Run coolbox.run.xml  watch.run.xml
assets/cools/cargo/: bat.toml
assets/cools/flutter/: ffigen.toml
assets/cools/macos/: wget.toml
cool/: Cargo.toml
cool-macros/: Cargo.toml
cool-macros/src/: lib.rs  state.rs
cool/src/: cool.rs  cool_list.rs  installer.rs  lib.rs  shell.rs  tasks.rs
cool/src/installer/: apt.rs  brew.rs  cargo.rs  dnf.rs  rpm.rs  yum.rs
cool/src/shell/: macos_sudo.rs
cool/src/tasks/: check_task.rs  command.rs  command_task.rs  compress.rs  compress_task.rs  copy.rs  copy_task.rs  decompress.rs  decompress_task.rs  delete.rs  delete_task.rs  download.rs  download_task.rs  exists_task.rs  git.rs  git_task.rs  install.rs  install_task.rs  move.rs  move_task.rs  uninstall_task.rs  which.rs  which_task.rs
coolbox/: Cargo.toml
coolbox-cool/src/: cool_list.rs
coolbox-gui/: Cargo.toml
coolbox-gui/src/: lib.rs  panel.rs  state.rs  widget.rs
coolbox-gui/src/panel/: cool_list.rs
coolbox-gui/src/widget/: check_box.rs  cool_card.rs  install_button.rs
coolbox/src/: app.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  progress.rs  result.rs
gui/: Cargo.toml
gui/src/: lib.rs  panel.rs  view.rs  widget.rs
gui/src/panel/: cool_box_panel.rs
gui/src/widget/: install_button.rs
lib/: app.dart  cool_card.dart  cool_grid_view.dart  cool_repository.dart  home.dart  main.dart  title_bar.dart
lib/builder/: annotation.dart  builder.dart  clazz.dart  toml.dart  toml_builder.dart
lib/model/: command.dart  cool.dart  cool.freezed.dart  cool_id.dart  cool_id.freezed.dart  package_manager.dart  shell.dart  task.dart  tasks.dart
lib/model/shell/: bash.dart  linux_sudo.dart  mac_sudo.dart  sh.dart
lib/model/tasks/: copy.dart  decompress.dart  delete.dart  download.dart  install.dart  move.dart  run.dart  task.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: app.rs  color_extension.rs  cool.rs  lib.rs  main.rs  style.rs  widget.rs
src/cool/: cool_card.rs
src/widget/: clip_container.rs
test/: shell_test.dart  widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
