[package]
name = "coolbox"
version = "0.1.1"
edition = "2021"
authors = ["BppleMan"]
license = "Apache-2.0"
#license-file = "LICENSE"
description = "A cool box for your terminal."
repository = "https://github.com/BppleMan/coolbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["tokio", "advanced", "debug", "lazy"] }
