[package]
name = "coolbox-gui"
description = "A gui lib for cool box."
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
# local
cool = { path = "../cool" }

# gui
egui.workspace = true
eframe.workspace = true
color-hex.workspace = true

# misc
crossbeam.workspace = true
rayon.workspace = true
